--- a/SelfieShare.Project25/Base.lproj/Main.storyboard
+++ b/SelfieShare.Project25/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,13 +22,22 @@
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nNB-Mk-aI4">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageView" id="nNB-Mk-aI4">
                                 <rect key="frame" x="10" y="10" width="145" height="145"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="145" height="145"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" tag="1000" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GEG-tM-wyc"/>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="GEG-tM-wyc" secondAttribute="trailing" id="b2a-9j-PIp"/>
+                                    <constraint firstItem="GEG-tM-wyc" firstAttribute="top" secondItem="nNB-Mk-aI4" secondAttribute="topMargin" id="bLf-zL-vr3"/>
+                                    <constraint firstItem="GEG-tM-wyc" firstAttribute="leading" secondItem="nNB-Mk-aI4" secondAttribute="leading" id="grG-SI-E4R"/>
+                                    <constraint firstItem="GEG-tM-wyc" firstAttribute="centerY" secondItem="nNB-Mk-aI4" secondAttribute="centerY" id="wh4-ln-xhw"/>
+                                </constraints>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -39,7 +49,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cCd-fg-3Y4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="890" y="-72"/>
+            <point key="canvasLocation" x="888.79999999999995" y="-72.413793103448285"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cHR-0d-HHU">
